test/shouldPass/vonVolker/test07.pas
program test07;
var
    i,j : integer;
    b : boolean;

begin

    b := i > j;

end.