test/shouldFail/vonJonas/invalid_identifier04.pas

program InvalidIdentifier04;

var 
  - : integer;
begin
end.
